# occt_wasm

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  commands.txt  history.txt  occt_wasm.bindings.cpp  occt_wasm.cpp  occt_wasm.h  test.cpp  test_lib_occt_wasm.html
patches/: occt_tag_variable_type.patch  rapidjson_remove_non_compiling_assignment_operator.patch
